versioned_docs/version-3.8.2/系统扩展指南/主页定制扩展例子.md
## 柱状图展示活动中作业组数
### 需要描述
以组织单元为维度，统计活动中作业组数
### 自定义处理
```js
// 获取所有组织单元
var orgUnits = [];
_.each(newData.rowList, function(item) {
    var str = item.OrgUnit;
    var arr = str.split(';');
    _.each(arr, function(name) {
        if (!~orgUnits.indexOf(name)) {
            orgUnits.push(name);
        }
    })
});
var data = {};
data.colList = [
    {
        "Field": "OrgUnit",
        "Title": "组织单元",
        "Width": 125,
        "Type": "dimension",
        "Visiable": true
    }, 
    {
        "Field": "Count",
        "Title": "数量",
        "Width": 125,
        "Type": "kpi",
        "Visiable": true
    }
];
data.rowList = [];
_.each(orgUnits,function(orgUnit){
    var item = {
        "OrgUnit": orgUnit,
        "Count": 0
    }
    _.each(newData.rowList,function(row){
        if(~row["OrgUnit"].indexOf(orgUnit)){
            item.Count++;
        }
    });
    // 转化为字符串
    item.Count += "";
    data.rowList.push(item);
});
data.selectKpi = "数量";
return data;
```

### 效果图
![主页sample1](/static/docimg/主页sample1.png)

