versioned_docs/version-4.0.4/系统扩展指南/主页定制扩展例子.md

import useBaseUrl from '@docusaurus/useBaseUrl';

## 柱状图展示活动中作业组数

### 需要描述

以组织单元为维度，统计活动中作业组数

### 自定义处理

```js
// 获取所有组织单元
var orgUnits = [];
_.each(newData.rowList, function(item) {
    var str = item.OrgUnit;
    var arr = str.split(';');
    _.each(arr, function(name) {
        if (!~orgUnits.indexOf(name)) {
            orgUnits.push(name);
        }
    })
});
var data = {};
data.colList = [
    {
        "Field": "OrgUnit",
        "Title": "组织单元",
        "Width": 125,
        "Type": "dimension",
        "Visiable": true
    }, 
    {
        "Field": "Count",
        "Title": "数量",
        "Width": 125,
        "Type": "kpi",
        "Visiable": true
    }
];
data.rowList = [];
_.each(orgUnits,function(orgUnit){
    var item = {
        "OrgUnit": orgUnit,
        "Count": 0
    }
    _.each(newData.rowList,function(row){
        if(~row["OrgUnit"].indexOf(orgUnit)){
            item.Count++;
        }
    });
    // 转化为字符串
    item.Count += "";
    data.rowList.push(item);
});
data.selectKpi = "数量";
return data;
```

### 效果图

<img alt=" " src={useBaseUrl('docimg/主页sample1.png')} />

## 以仪表盘的样式展示资产属性的值

### 需求描述

数据源为保存或另存的某个资产的属性报表，以仪表盘的样式展示在主页上

### 编辑小部件

* 如图：

<img alt=" " src={useBaseUrl('docimg/yibiaopan1.png')} />

### 自定义处理

```
var value = parseFloat(newData.rowList[0]["AssetPropertyValue"]);
value = Number(value.toString()).toFixed(2);
newData = {
    "value": Number(value),
    "unit": "%",
    "splitThreshold": [
        { "from": 0, "to": 90, "color": "green" },
        { "from": 90, "to": 100, "color": "orange" },
        { "from": 100, "to": 120, "color": "red" }
    ],
    "description": "1#窗帘产线负荷率"
}
return newData;

```

### 效果图

<img alt=" " src={useBaseUrl('docimg/yibiaopan2.png')} />
